tests/paczka1/small_fuzzy/20340261.err
Error in line 3: TaHq4 S50 32,1
Error in line 1: iPSXe8buJtt S50 69,5
